--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: auto;
+}
+
+@layer utilities {
+  .header {
+    @apply w-full flex flex-col justify-between px-[15px] py-2 md:px-[23px] md:py-4 bg-dark-gradient-180deg gap-2;
+  }
+
+  .loginbtn {
+    @apply px-4 py-1 bg-transparent border border-color-30 rounded-full flex justify-center items-center text-color-30 text-sm hover:bg-light-gradient-135deg cursor-pointer;
+  }
+
+  .registerbtn {
+    @apply px-4 py-1 bg-light-gradient-135deg border border-color-30 rounded-full flex justify-center items-center text-color-30 text-sm cursor-pointer;
+  }
+
+  .activeMenu {
+    @apply text-color-30 text-base px-5 py-2 border-b-color-10 border-b-4
+  }
+
+  .menu {
+    @apply text-color-30 text-base px-5 py-2
+  }
 }
