--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
 
 @layer utilities {
   .header {
-    @apply w-full flex flex-col justify-between px-[15px] py-2 md:px-[23px] md:py-4 bg-dark-gradient-180deg gap-2;
+    @apply w-full flex flex-col justify-between px-[15px] py-2 md:px-[23px] md:py-4 bg-dark-gradient-180deg gap-2 drop-shadow-drop-box;
   }
 
   .loginbtn {
