--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,36 @@ body {
 }
 
 
+.showBets {
+  animation-name: showbet;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+.hideBets {
+  animation-name: hidebet;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+
+
+@keyframes showbet {
+  0% { height: 48px; }
+  90% { height: 300px; }
+  100% { height: auto; }
+}
+
+@keyframes hidebet {
+  0% { height: auto; }
+  10% { height: 300px; }
+  100% { height: 48px; }
+}
+
+
 
 @layer utilities {
   .header {
