Debugging google translate breaking the app

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ body {
 
 /* hiding the google translate widget */
 .skiptranslate iframe {
-  display: none !important;
+  margin-top: -500px !important;
 }
 
 ::-webkit-scrollbar {
