Implement google language translator

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,12 @@ body {
 }
 
 
+/* hiding the google translate widget */
+.skiptranslate iframe {
+  display: none !important;
+}
+
+
 .showBets {
   animation-name: showbet;
   animation-duration: 0.5s;
